# LIVISI-Unofficial-SmartHome-Frontend

./: .easignore  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yaml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  prepareInstallation.sh  run.bat  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build-mobile.yml  buildRust.yml  ci.yml
api/: .gitignore  API.json  Cargo.toml  Dockerfile  docker-bake.hcl
api/src/: auth_middleware.rs  main.rs  openapi_doc.rs  sentry.rs  store.rs  token_middleware.rs
api/src/api_lib/: action.rs  capability.rs  device.rs  email.rs  hash.rs  home.rs  interaction.rs  livisi_response_type.rs  livisiresponse_type.rs  location.rs  message.rs  mod.rs  product.rs  relationship.rs  status.rs  unmount_service.rs  user.rs  user_storage.rs
api/src/constants/: constant_types.rs  constants.rs  mod.rs
api/src/controllers/: action_controller.rs  all_api.rs  api_config_controller.rs  capabilty_controller.rs  data_controller.rs  device_controller.rs  email_controller.rs  hash_controller.rs  home_controller.rs  images_controller.rs  interaction_controller.rs  location_controller.rs  message_controller.rs  mod.rs  relationship_controller.rs  status_controller.rs  unmount_controller.rs  user_controller.rs  user_storage.rs  user_storage_controller.rs  websocket_controller.rs
api/src/lib/: action.rs  capability.rs  device.rs  hash.rs  interaction.rs  location.rs  mod.rs  relationship.rs  status.rs  user_storage.rs
api/src/models/: client_data.rs  mod.rs  oidc_model.rs  socket_event.rs  token.rs
api/src/server/: auth.rs  handlers.rs  health.rs  mod.rs  sorting.rs  ui.rs  ws.rs
api/src/utils/: connection.rs  header_utils.rs  lock_macro.rs  logging.rs  mod.rs
api/src/ws/: broadcast_message.rs  mod.rs  web_socket.rs  web_socket_message.rs
api/static/: .gitignore
api/static/assets/: index-8e8856a2.js  index-dc92289f.js
api_reference/: action.yaml  capability.yaml  capability_id.yaml  device.yaml  interaction_id.yaml  location_id.yaml  message.yaml  openapiSmartHome.yaml  product.yaml  smartcode.yaml  status.yaml  subscription_id.yaml
api_reference/HomeAPI/: Interaction.yaml  OpenapiSmartHome.yaml
docs/book/: book.toml
drawings/: splash.xcf
kubernetes/: smarthome.yml
mobile/: README.md  app.json  eas.json  metro.config.js  package-lock.json  package.json  pnpm-lock.yaml  privacy-policy
mobile/app/: +not-found.tsx  _layout.tsx
mobile/components/: Chip.tsx  CustomDrawer.tsx  DeviceDecider.tsx  ErrorBanner.tsx  Heatingdevice.tsx  InputField.tsx  Link.tsx  ListItem.tsx  ListItemDescription.tsx  (+16 more)
public/: index.html
src/: App.tsx  index.tsx  main.tsx
ui/: .gitignore  Dockerfile  index.html  package.json  pnpm-lock.yaml  sample.env  vite.config.ts
ui-new/: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.cjs  tailwind.config.cjs  tsconfig.json  vite.config.ts
(+244 files in other folders)
