[package]
name = "api"
version = "0.1.0"
edition = "2021"


[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-gcc-ar"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
urlencoding = "2.1.3"
reqwest = {version= "0.12.5", features = ["blocking", "json"]}
serde = {version="1.0.204"}
chrono = "0.4.38"
tokio = { version="1.38.2", features = ["full"] }
serde_derive = "1.0.152"
serde_json = "1.0.93"
axum = { version = "0.7.9", features = ["ws"] }
log = "0.4.22"
tungstenite = {version = "0.20.1", features = ["native-tls"]}
uuid = {version="1.4.0", features = ["v4", "serde"]}
clokwerk = "0.4.0"
base64 = "0.22.1"
kv = "0.24.0"
jsonwebtoken = "9.3.0"
env_logger = "0.11.5"
path-clean = "1.0.1"
clap = { version = "4.5.11", features = ["derive"] }
sunrise = "3.0.0"
include_dir = "0.7.4"
utoipa = { version = "5.3.1", features = ["chrono"] }
