[package]
name = "api"
version = "0.1.0"
edition = "2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
urlencoding = "2.1.3"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228" }
chrono = "0.4.44"
tokio = { version = "1.51.0", features = ["full"] }
serde_derive = "1.0.228"
serde_json = "1.0.149"
axum = { version = "0.8.8", features = ["ws"] }
log = "0.4.29"
tungstenite = { version = "0.29.0", features = ["native-tls"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }
clokwerk = "0.4.0"
base64 = "0.22.1"
kv = "0.24.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
env_logger = "0.11.9"
path-clean = "1.0.1"
clap = { version = "4.6.0", features = ["derive"] }
sunrise = "3.0.0"
include_dir = "0.7.4"
utoipa = { version = "5.4.0", features = ["chrono"] }
