[package]
name = "api"
version = "0.1.0"
edition = "2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
urlencoding = "2.1.3"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
serde = { version = "1.0.228" }
chrono = "0.4.45"
tokio = { version = "1.52.3", features = ["full"] }
serde_derive = "1.0.228"
serde_json = "1.0.150"
axum = { version = "0.8.9", features = ["ws"] }
log = "0.4.32"
tungstenite = { version = "0.29.0", features = ["native-tls"] }
uuid = { version = "1.23.2", features = ["v4", "serde"] }
base64 = "0.22.1"
kv = "0.24.0"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
env_logger = "0.11.10"
path-clean = "1.0.1"
clap = { version = "4.6.1", features = ["derive"] }
sunrise = "3.0.0"
include_dir = "0.7.4"
utoipa = { version = "5.5.0", features = ["chrono"] }
tokio-postgres = { version = "0.7.15", features = ["with-serde_json-1"] }
